sterlang/examples/neg/src/n02.erlt
-module(n02).
-export([f/1]).

%% circularity
f(_) -> f(fun f/1).
